<resources>
    <string name="app_name">GesunderLeben</string>

    <string name="reset">Reset</string>
    <string name="main">Main</string>
    <string name="akt">Datenupdate</string>
    <string name="do_you_want_to_reset">Do you want to reset your Data?</string>
    <string name="age">Alter</string>
    <string name="state">Körperliche Verfassung (1-gut...5-schlecht)</string>
    <string name="datemustbefilled">Alle Daten müssen ausgefült werden</string>
    <string name="body_fat_percentage">Kennen Sie Ihren Körperfettanteil?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="body_fat_percentage_in_percent">Körperfettanteil in %</string>
    <string name="antropometry">Gewicht und Körpergröße</string>
    <string name="body_height_in_cm">Körpergröße in cm</string>
    <string name="weight_in_kg"><font size="12">Gewicht (kg in ganzen Zahlen)</font></string>
    <string name="back">Zurück</string>
    <string name="foodplan">Nahrungsplan</string>
    <string name="fitnessplan">Fitnessplan</string>
    <string name="desired_weight">Wünschgewicht</string>
    <string name="kg">Kg</string>

    <string name="welcome">Willkommen bei "Gesundleben"</string>
    <string name="daily_plan">Aufgenommene Nahrung &amp; ausgeführte Freizeitaktivitäten</string>
    <string name="progress">Fortschritt</string>
    <string name="time_plan">Zeitplan</string>
    <string name="new_plan">Neuer Plan</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string-array name="spinnerItems">
        <item>Gramm</item>
        <item>Stück</item>
    </string-array>
</resources>
