<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">

    <TableRow>
        <!-- Column 1 -->
        <Button
            android:id="@+id/buttonReset"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <!-- Column 2 -->
        <Button
            android:id="@+id/buttonMain"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/main" />

        <!-- Column 3 -->
        <Button
            android:id="@+id/buttonAkt"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/akt" />
    </TableRow>
</TableLayout>